--- a/asset/resume.html
+++ b/asset/resume.html
@@ -240,13 +240,13 @@
           <div class="description">
             <ul class="firstD">
               <li>
-                Designed fully functional student dashboard to fullfill all kinds of student needs related to education.
+                Designed a fully functional student dashboard to fulfill all kinds of student needs related to education.
               </li>
               <li class="webDescription">
-             Developed the application's front-end using HTML, CSS, Jquery and bootstrap, Moment.js and some other libraries.
+             Developed the application's front-end using HTML, CSS, Jquery and bootstrap, <b>Moment.js</b> and some other libraries.
               </li>
               <li class="webDescription">
-                Integrated front-end with backend using fetch API's and the dashboard is live for more than thousands of students.
+                Integrated front-end with backend using <b>fetch API's</b> and the dashboard is live for more than <b>thousands of students</b>.
               </li>
             </ul>
           </div>
@@ -307,7 +307,7 @@
         <div class="description">
           <ul class="firstD">
             <li>
-                Converted the PSD design into HTML, CSS without using any framework and made it fully responsive for mobile and i-pad compatible devices.
+                Converted the <b>PSD design into HTML, CSS</b> without using any framework and made it fully <b>responsive</b> for mobile and i-pad compatible devices.
             </li>
             <li class="webDescription">
                 Designed user interactive elements to grab users' attention using transitions, animations, and videos.
