--- a/asset/resume.html
+++ b/asset/resume.html
@@ -373,7 +373,7 @@
               </li>
           </ul>
         </div>
-        <!--         <span id="madeby">MADE BY SAHIR USING HTML</span> -->
+        <!--         <span id="madeby">MADE BY SAHIR KHAN USING HTML</span> -->
       </div>
     </div>
   </body>
