--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 CONTACT ME
               </button></a
             >
-            <a target="_blank" href="./asset/resume.html"
+            <a target="_blank" href="./asset/Sahir_Resume.pdf"
               ><button class="btn">DOWNLOAD CV</button></a
             >
           </div>
