--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 CONTACT ME
               </button></a
             >
-            <a target="_blank" href="./asset/Sahir_Resume.pdf"
+            <a target="_blank" href="https://drive.google.com/file/d/1ClXojWcJOBgCAI7QkY8wO4zxfqdpVFUA/view"
               ><button class="btn">DOWNLOAD CV</button></a
             >
           </div>
